[package]
name = "quantum_resistant_toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
pqcrypto = "0.5.0"
pqcrypto-dilithium = { version = "0.5.0", default-features = false }
pqcrypto-kyber = { version = "0.8.1", default-features = false }
pqcrypto-traits = "0.3.5"
hex = "0.4"
pqcrypto-falcon = "0.4.0"
pqcrypto-sphincsplus = "0.5.0"
